tests/pass/run/callback_builder_style_parity/main.kira
class CallbackApp {
    function onEvent(handler: (Int) -> Void) {
        handler(42)
        return
    }
}

@Main
function main() {
    let app = CallbackApp()
    app.onEvent { value in
        print(value)
    }
    return
}
