tests/fail/semantics/trailing_callback_parameter_mismatch/main.kira
function register(handler: (Int) -> Void) {
    return;
}

@Main
function main() {
    register { in
        return;
    }
    return;
}
